Change configuration parameters ..